--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
 	<script src='script/main.js'></script>
+	<script src='script/freecell.js'></script>
 </head>
 <body>
 	<h1>Freecell</h1>
