affichage correcte (grille, pixels inversé, texte)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel='stylesheet' type='text/css' media='screen' href='style/main.css'>
 	<script src='script/main.js'></script>
 	<script src='script/freecell.js'></script>
+	<script src='script/displayGraphCasio.js'></script>
 </head>
 <body>
 	<h1>Freecell</h1>
