--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 		<h2>Crédits</h2>
 		<p>Jeu de carte FreeCell porté depuis un programme réalisé en CASIO Basic.</p>
 		<p>Réalisé par Jérôme L. en 2019, porté en JavaScript en 2024.</p>
+		<p>Sources https://github.com/Jiogo18/FreeCell</p>
 	</div>
 </body>
 
