--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="card_13_heart.png" />
+    <link rel="icon" type="image/png" href="card_13_heart.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Freecell</title>
   </head>
